<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mycompany.gxtapp.FieldSheet"
    android:animationCache="false">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textScaleX="1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:text="@string/field_sheet"
        android:textColor="@color/blue"
        android:id="@+id/textView9"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:textSize="48sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/road_name"
        android:id="@+id/road_name"
        android:layout_marginTop="75dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/road_name_read"
        android:layout_marginLeft="200dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"
        android:layout_alignParentStart="true"
        android:inputType="text"
        android:cursorVisible="false"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dir_looking"
        android:id="@+id/dir_looking"
        android:layout_marginTop="125dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="false"
        android:layout_marginLeft="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dir_looking_read"
        android:layout_marginLeft="200dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="125dp"
        android:layout_alignParentStart="true"
        android:inputType="text"
        android:cursorVisible="false"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dir_base"
        android:id="@+id/dir_base"
        android:layout_marginTop="175dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dir_base_read"
        android:layout_marginLeft="200dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="175dp"
        android:layout_alignParentStart="true"
        android:inputType="text"
        android:cursorVisible="false"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin_button"
        android:id="@+id/begin"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="161dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick"/>

</RelativeLayout>
