<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mycompany.gxtapp.ProjectInformation"
    android:orientation="vertical">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_text"
        android:id="@+id/imageView"
        android:src="@drawable/gxt"
        android:contentDescription="gxt"
        android:baselineAlignBottom="false"
        android:clickable="false"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        android:longClickable="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView3"
        android:text="@string/project_info"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:textSize="34sp"
        android:textIsSelectable="true"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="3"
        android:lines="2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Please enter GXT Project Number, Client Project Number, Project Address"
        android:id="@+id/textView"
        android:textSize="20sp"
        android:layout_marginTop="53dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gxt_project_number"
        android:id="@+id/textView4"
        android:gravity="top"
        android:layout_below="@+id/textView"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/gxtpProject"
        android:inputType="text"
        android:cursorVisible="false"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/accent_material_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/client_number"
        android:id="@+id/textView5"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clientProject"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/imageView"
        android:layout_toEndOf="@+id/textView5"
        android:layout_alignParentStart="true"
        android:inputType="text"
        android:cursorVisible="false"
        android:layout_gravity="center_horizontal"
        android:autoText="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/project_address"
        android:id="@+id/textView6"
        android:layout_marginLeft="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/projAddress"
        android:layout_marginLeft="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignParentStart="true"
        android:inputType="text"
        android:cursorVisible="false"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/eng_name"
        android:id="@+id/textView7"
        android:layout_marginLeft="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/engName"
        android:layout_marginLeft="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/imageView"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:cursorVisible="false"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/next_button"
        android:id="@+id/button3"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

</LinearLayout>
