<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/title_text"
        android:id="@+id/imageView"
        android:src="@drawable/gxt"
        android:contentDescription="gxt"
        android:visibility="visible"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textView" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textScaleX="1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:text="@string/main_title"
        android:textColor="@color/blue"
        android:id="@+id/textView2"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:textSize="32sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_project"
        android:id="@+id/button"
        android:layout_above="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:layout_alignStart="@+id/button2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/existing_project"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="103dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="3"
        android:lines="2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Do you want to create a new project, or continue on existing?"
        android:id="@+id/textView"
        android:textSize="20sp"
        android:layout_marginTop="75dp"
        android:layout_below="@+id/textView2"
        android:layout_alignEnd="@+id/button" />

    <!--
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />
    -->

</RelativeLayout>
